# football-game

./: .gitignore  CLAUDE.md  Cargo.toml  Fotbolls-RPG.html  HANDOFF-WASM-REDO.md  HANDOFF-WASM.md  Match Preview.html  README.md  binder.jsx  coach  coach_nudge.py  football-match.jsx  game-world.jsx  match-engine.js  match-hud.jsx  simulate-match.js  sound-engine.js  team-data.js  team-select.jsx  train-policy.js
.claude/: launch.json  settings.json
data/: training-history.json
feature-set-pieces-gk/: Fotbolls-RPG.html  football-match.jsx  match-screen.jsx  questions.jsx  team-select.jsx
match-engine-wasm/: Cargo.toml
per-player-params/: Fotbolls-RPG.html
refactor-v6-only/: Fotbolls-RPG.html  app.jsx  football-match.jsx
refactor-wasm-engine/: football-match.jsx  game.jsx  index.html
scripts/: collect-training-stats.py  compute-team-stats.py  log-server.py  overnight-train.sh  plot-team-goals.py  (+2 more)
training-cli/: Cargo.toml
training-cli/src/: main.rs
training-cli/src/cli/: anneal.rs  layout.rs  mod.rs  optimize.rs  params.rs  teams.rs  tournament.rs  training.rs  util.rs  v7.rs
training-engine/: Cargo.toml
training-engine/src/: ai.rs  brain.rs  constants.rs  detector.rs  game.rs  gk.rs  lib.rs  main.rs  math.rs  physics.rs  policy.rs  session.rs  spatial.rs  svg.rs  team.rs  team_v6.rs  team_v7.rs  trainer.rs
training-engine/src/ai/: decisions.rs  helpers.rs  mod.rs  movement.rs  v6.rs
training-engine/src/physics/: ball.rs  helpers.rs  mod.rs  rules.rs  setpieces.rs
training-engine/src/policy/: mod.rs  v6.rs  v7.rs
training-engine/tests/: test_ai_decisions.rs  test_ai_helpers.rs  test_ai_v6.rs  test_detector.rs  test_game_flow.rs  test_physics_ball.rs  test_physics_helpers.rs  test_physics_rules.rs  test_physics_setpieces.rs  test_policy.rs  test_team_v7.rs
training-engine/tests/common/: mod.rs
(+9401 files in other folders)
