[package]
name = "training-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "training-engine"
path = "src/main.rs"

[dependencies]
training-engine = { path = "../training-engine" }
training-render = { path = "../training-render" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
