[package]
name = "training-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "training-engine"
path = "src/main.rs"

[dependencies]
rayon      = "1"
rand       = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
