[package]
name = "training-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "training_engine"
path = "src/lib.rs"

[dependencies]
rand       = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon      = "1"
